[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ch2hatena"
version = "0.1.0"
description = "AI-chatbot conversation logger and blog auto-poster"
authors = [
  {name = "Hiroaki Ito", email = "mobiiii24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "requests-oauthlib",
    "google-genai",
    "pyyaml",
    "yfinance",
    "pydantic",
    "python-dotenv",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy"
]


[project.scripts]
ch2hatena = "ch2hatena.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
