[project]
name = "cha2hatena"
version = "0.1.0"
description = "AI-chatbot conversation summarizer and blog auto-poster"
authors = [
  {name = "Hiroaki Ito", email = "mobiiii24@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["chatbot", "blog", "hatena", "automation", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests",
    "requests-oauthlib",
    "google-genai",
    "pyyaml",
    "yfinance",
    "pydantic",
    "python-dotenv",
    "pandas"
]

[project.urls]
Repository = "https://github.com/HiroItozzz/chatlog-2-hatena.git"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
cha2hatena = "cha2hatena.main:main"

[tool.ruff]
line-length = 120